Merge, Fix 2 crashes, dictionary fixes

--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -66,10 +66,10 @@
   "Jodi swung by the farm to ask you to dinner at 7:00 PM. Her only request was that you bring a largemouth bass for her fish casserole.": "Джоди зашла на ферму, чтобы пригласить вас на ужин в 7:00 вечера. Её единственной просьбой было, чтоьбы вы принесли окуня для ее рыбной запеканки.",
   "Enter Jodi's house with a largemouth bass at 7:00 PM.": "Зайти домой к Джоди с окунем в 7:00 PM.",
   "Archaeology": "Археология",
-  "You found an ancient-looking object. Could it be some kind of artifact from long ago? Perhaps Gunther, curator of the local museum, has the answer.": "Вы нашли древний с виду предмет. Может ли это быть какой-то артефакт из давнего прошлого? Возможно, Гюнтер, куратор местного музея, знает ответ.",
+  "You found an ancient-looking object. Could it be some kind of artifact from long ago? Perhaps Gunther, curator of the local museum, has the answer.": "Вы нашли древний с виду предмет. Может быть это какой-то артефакт из давнего прошлого? Возможно, Гюнтер, куратор местного музея, знает ответ.",
   "Visit Gunther at the museum.": "Навестить Гюнтера в музее.",
   "Archaeology": "Археология",
-  "Gunther asked if you'd consider donating any new artifacts or minerals you find to the museum. He says he'll compensate you by way of occasional rare goods.": "Гюнтер попросил, пожертвавать музею какие-нибудь новые артефакты или минералы, которые вы найшли. Он говорит, что компенсирует вам пожертвования случайными редкими предметами.",
+  "Gunther asked if you'd consider donating any new artifacts or minerals you find to the museum. He says he'll compensate you by way of occasional rare goods.": "Гюнтер попросил, пожертвавать музею какие-нибудь артефакты или минералы, которые вы нашли. Он говорит, что компенсирует вам пожертвования случайными редкими предметами.",
   "Donate an artifact or a mineral to the museum.": "Пожертвовать артефакт или минералы музею.",
   "How To Win Friends": "Как завоевывать друзей",
   "Giving gifts is a great way to build friendships. Learn each person's individual tastes and you'll be popular in no time.": "Дарение подарков - отличный способ построить дружеские отношения. Узнайте индивидуальные вкусы каждого человека, и вы быстро станете популярны.",
@@ -97,10 +97,10 @@
   "Demetrius needs a fresh melon for his research.": "Деметриус нуждается в свежей дыни для его исследования.",
   "Bring Demetrius a melon.": "Принести Деметриусу дыню.",
   "This is perfect! It's just what I need for my research. It's going to be hard not to eat it! Thanks a bunch.": "Это потрясающе! Это именно то, что нужно для моих исследований. Будет трудно не съесть его! Огромное спасибо.",
-  "Knee Therapy": "Колено терапия",
+  "Knee Therapy": "Коленотерапия",
   "George needs a hot pepper to soothe his aching knee.": "Джордж нуждается в остром перце, чтобы успокоить свое больное колено.",
   "Bring George a Hot Pepper.": "Отдать Джорджу острый Перец.",
-  "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал Вас достаточно долго... Хммм... Ну, он хороший и пряный по крайней мере. Спасибо.",
+  "Took you long enough... hmmph... Well it's good and spicy at least. Thanks.": "Я ждал тебя достаточно долго... Хммм... Ну, он по крайней мере хороший и острый. Спасибо.",
   "Cow's Delight": "Коровий восторг",
   "Marnie wants to give her cows a special treat. She's asking for a single bunch of amaranth.": "Марни хочет, чтобы коровы получили специальное угощение. Она просит одну кучу амаранта.",
   "Bring Marnie one bunch of amaranth.": "Принести Марни одну кучу амаранта.",
