--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -28,12 +28,12 @@
   "Silo": "Силос",
   "Stable": "Конюшня",
   "Well": "Колодец",
-  "Coop": "Курятник",
+  "Coop": "Птичник",
   "Big Coop": "Большой птичник",
   "Deluxe Coop": "Огромный птичник",
-  "Barn": "Амбар",
-  "Big Barn": "Большой амбар",
-  "Deluxe Barn": "Огромный амбар",
+  "Barn": "Хлев",
+  "Big Barn": "Большой хлев",
+  "Deluxe Barn": "Огромный хлев",
   "Slime Hutch": "Ферма слизней",
   "Greenhouse": "Теплица",
   "Mine Elevator": "Лифт шахты",
@@ -150,6 +150,7 @@
   "Oh, hi!": "О, привет!",
   "Welcome!": "Добро пожаловать!",
   "Hello there.": "Здравствуй.",
+  "Hello, @player": "Здравствуй, @player",
   "__comment DeliciousAdjective": "__comment DeliciousAdjective",
   "yummy": "вкуснятина",
   "delicious": "вкусно",
@@ -405,9 +406,9 @@
   "skyblue": "небесно-голубой",
   "bubblegumpink": "насыщено розовый",
   "bloodred": "кроваво-красный",
-  "brightorange": "ярко-оранжеевый",
+  "brightorange": "ярко-оранжевый",
   "naquamarine": "аквамариновый",
-  "silvery": "серебряный",
+  "silvery": "серебристый",
   "glimmeringgold": "сверкающий золотом",
   "rainbow": "радужный",
   "__comment Dialogues features": "__comment Dialogues features",
