--- a/MultiLanguage/languages/RU/dictionaries/_Locations.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Locations.json
@@ -69,7 +69,7 @@
   "The children look sickly, and all the young men are delinquents from what I've seen so far...": "Дети выглядят нездоровыми, а все подростки больше похожи на преступников...",
   "Although, they are displaying our corporate logo, which you'll be pleased to hear, sir.": "Несмотря на это, они представляют логотип нашей компании, что должно вас обрадовать, сэр.",
   "*snort* ... Yes, sir. It definitely won't be a problem to get these country rubes to sign the paperwork...": "фыркает* ... Да, сэр. Не будет никаких проблем, чтобы получить подпись от деревенщины...",
-  "We'll have that new Joja Hypermarket up and running in no time. Then maybe we can discuss that new": "Ну, а сейчас мы будем стараться, чтобы гипермаркет ДжоДжа открылся как можно быстрее. И тогда мы сможем обсудить об открытии нового",
+  "We'll have that new Joja Hypermarket up and running in no time. Then maybe we can discuss that new": "Ну, а сейчас мы будем стараться, чтобы гипермаркет Joja открылся как можно быстрее. И тогда мы сможем обсудить об открытии нового",
   "Moustached Man: Everyone, look!!": "Усатый мужчина: Посмотрите все!!",
   "Moustached Man: There it is! Stardew Valley!": "Усатый мужчина: Эта она! Долина Стардью!",
   "Buy a ticket to Calico Desert for 500g?": "Купить билет в пустыню Калико за 500g?",
@@ -106,22 +106,22 @@
   "You unlock the sewer hatch with the Rusty Key!": "Ты открыл канализационный люк Ржавым Ключом!",
   "It's locked...": "Закрыто...",
   "It looks abandoned...": "Выглядит заброшенным...",
-  "If you become a Joja Member, the community center will become a Joja Warehouse, and you will no longer be able to refurbish it. However, Joja will provide an alternative means to improving the town. Are you sure you want to join?": "Если вы вступите в общество ДжоДжа, общественный центр станет ДжоДжа складом и вы не сможете обновить его. Тем не менее, ДжоДжа предоставит альтернативные варианты для улучшения города. Вы уверены, что хотите присоединиться к ним?",
-  "Excellent! Welcome to Joja Corporation! Come back tomorrow and we can see about getting started on some community development projects... Oh, and don't forget your wallet! Hehe.": "Отлично! Добро пожаловать в корпорацию ДжоДжа! Возвращайтесь завтра и вы сможете увидеть начало работы над общественными проектами... Да, и не забудьте свой кошелек! Хехе.",
+  "If you become a Joja Member, the community center will become a Joja Warehouse, and you will no longer be able to refurbish it. However, Joja will provide an alternative means to improving the town. Are you sure you want to join?": "Если вы вступите в общество Joja, общественный центр станет Joja складом и вы не сможете обновить его. Тем не менее, Joja предоставит альтернативные варианты для улучшения города. Вы уверены, что хотите присоединиться к ним?",
+  "Excellent! Welcome to Joja Corporation! Come back tomorrow and we can see about getting started on some community development projects... Oh, and don't forget your wallet! Hehe.": "Отлично! Добро пожаловать в корпорацию Joja! Возвращайтесь завтра и вы сможете увидеть начало работы над общественными проектами... Да, и не забудьте свой кошелек! Хе-хе.",
   "Now, let me call Mayor Lewis and see about gutting that nasty old community center...": "А теперь позвольте позвонить Мэру Льюису и посмотреть, как потрошат этот мерзкий и старый общественный центр...",
   "Come back tomorrow and we can see about getting some community improvements started... Just make sure to bring a lot of money. Hehe.": "Приходите завтра и мы увидим начало работ над некоторыми улучшениями... Главное возьмите побольше денег. Хехе.",
-  "Welcome to JojaMart! How are you doing today?": "Добро пожаловать в ДжоДжа Маркет! Как ваши дела?",
-  "I don't believe we've met. I'm Morris, Joja Customer Satisfaction Representative.": "Я не могу поверить, что мы еще не встречались. Я - Моррис, Представить сервиса для клиентов корпорации ДжоДжа.",
-  "When you decide you want to become a Joja Member, I'll be delighted to help make your transition a joyous experience.": "Когда вы решите стать членом общества ДжоДжа, я буду рад помочь вам ощутить этот счастливый момент.",
-  "Welcome to JojaMart! How is your weekend going?": "Добро пожаловать в ДжоДжа Маркет! Как проходят твои выходные?",
+  "Welcome to JojaMart! How are you doing today?": "Добро пожаловать в Joja Маркет! Как ваши дела?",
+  "I don't believe we've met. I'm Morris, Joja Customer Satisfaction Representative.": "Я не могу поверить, что мы еще не встречались. Я - Моррис, представитель отдела по работе с клиентами в корпорации Joja.",
+  "When you decide you want to become a Joja Member, I'll be delighted to help make your transition a joyous experience.": "Когда вы решите стать членом общества Joja, я буду рад помочь вам ощутить этот счастливый момент.",
+  "Welcome to JojaMart! How is your weekend going?": "Добро пожаловать в Joja Маркет! Как проходят твои выходные?",
   "We're currently in the process of setting up a brand-new membership system for our customers. Please check back soon to join!": "В настоящий момент мы запустили процесс создания членства для наших клиентов. Пожалуйста, зайдите позже, чтобы присоединиться к нам.",
-  "Membership is now available! With a Joja Membership, you'll be able to make improvements in the community with the help of our dedicated personnel... for a fee, of course.": "Членство доступно! В обществе ДжоДжа, вы будете иметь возможность вносить улучшения в сообщество с помощью наших самых преданных сотрудников ... за отдельную плату, конечно.",
-  "Oh, and another thing... Mayor Lewis promised us that if anyone else joined up, he'd let us turn that old community center into a Joja Warehouse. Isn't that wonderful?": "Да, и еще одна вещь... Мэр Льюис обещал, что если кто-то присоединиться к нам, мы сможем перестроить этот старый общественный центр в ДжоДжа склад. Ну не чудесно ли?",
+  "Membership is now available! With a Joja Membership, you'll be able to make improvements in the community with the help of our dedicated personnel... for a fee, of course.": "Членство доступно! В обществе Joja, вы будете иметь возможность вносить улучшения в сообщество с помощью наших самых преданных сотрудников ... за отдельную плату, конечно.",
+  "Oh, and another thing... Mayor Lewis promised us that if anyone else joined up, he'd let us turn that old community center into a Joja Warehouse. Isn't that wonderful?": "Да, и еще одна вещь... Мэр Льюис обещал, что если кто-то присоединиться к нам, мы сможем перестроить этот старый общественный центр в Joja склад. Ну не чудесно ли?",
   "Membership costs @numberg. Well, would you like to join us?": "Членство стоит @numberg. Ну, вы желаете вступить?",
   "Hmm... Our records show that you live on a farm with some other folks... I'm sorry, but we can only sell a membership to the owner of your residence.": "Хм... Наши записи говорят о том, что на ферме, где вы живете, есть и другие люди... Мне жаль, но получить членство можете только вы, как владелец земли.",
   "We're currently processing your last Community Development order. Please come back after the work is complete.": "Мы все еще работаем над Общественным Развитием, которое вы заказали раньше. Пожалуйста, возвращайтесь после того, как работа будет закончена.",
-  "I've got the Joja Community Development Form right here for you, sir. Care to take a look?": "У меня есть Форма Общественного Развития ДжоДжа для вас, сэр. Хотите взглянуть?",
-  "I've got the Joja Community Development Form right here for you, miss. Care to take a look?": "У меня есть Форма Общественного Развития ДжоДжа для вас, мисс. Хотите взглянуть?",
+  "I've got the Joja Community Development Form right here for you, sir. Care to take a look?": "У меня есть Форма Общественного Развития Joja для вас, сэр. Хотите взглянуть?",
+  "I've got the Joja Community Development Form right here for you, miss. Care to take a look?": "У меня есть Форма Общественного Развития Joja для вас, мисс. Хотите взглянуть?",
   "A way down has appeared.": "Путь вниз свободен.",
   "This area is infested...": "Это место буквально кишит...",
   "This area is overrun with monsters.": "Это место кишит монстрами.",
@@ -149,7 +149,7 @@
   "It was pretty high-quality stuff. As soon as I smelled it I was back in Granny's old cottage...": "Он был очень высокого качества. Как только я унюхал этот аромат, сразу вернулся в коттедж бабушки...",
   "It was pretty high-quality stuff. I'm impressed.": "Он был высокого качества. Я впечатлен.",
   "I went shopping last night and picked up a fresh @key on sale for only @number g.": "Вчера вечером я пошел в магазин за свежим @key и купил его за @number g.",
-  "I went shopping last night and picked up @key @key on sale for only @number g.": "Вчера вечером я пошел в магазин за @key @key и купил его за @number g.",
+  "I went shopping last night and picked up @key @key on sale for only @number g.": "Вчера вечером я пошел в магазин за @key @key на распродажу и потратил всего @number g.",
   "I couldn't pass up that great price.": "Я не мог упустить такой прекрасной цены.",
   "It was actually pretty @key.": "Это и правда прекрасный @key.",
   "It was @key! No wonder Pierre was selling that @key for so cheap...": "Это @key! Не удивительно, что Пьер не продавал @key так дешево...",
