--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -11,11 +11,11 @@
   "Allow Pregnancy": "Разрешить беременность",
   "Age: @number month": "Возраст: @number месяц",
   "Age: @number months": "Возраст: @number месяца",
-  "Age: @number month (Baby)": "Возраст: @number месяц (Ребенок)",
-  "Age: @number months (Baby)": "Возраст: @number месяца (Ребенок)",
+  "Age: @number month (Baby)": "Возраст: @number м (детёныш)",
+  "Age: @number months (Baby)": "Возраст: @number м (детёныш)",
   "Parent: @key": "Родитель: @key",
   "Are you sure?": "Вы уверены?",
-  "Please choose a @keyV for your @keyR": "Пожалуйста выберете @keyV для вашего @keyR",
+  "Please choose a @key for your @key": "Пожалуйста выберете @keyV для вашего @keyR",
   "__comment Menus/Billboard.cs": "__comment Menus/Billboard.cs",
   "@key's Birthday": "День рождения @keyR",
   "@key' Birthday": "День рождения @keyR",
@@ -26,6 +26,8 @@
   "Incorrect Building Type": "Неправильный тип здания",
   "Can Only Place Outside On Farm": "Можно только за пределами фермы",
   "Can't Build There": "Не может быть построено здесь",
+  "Demolish Buildings": "Снос зданий",
+  "Upgrade from @key": "Улучшение @keyR",
   "Fullness:": "Сытость:",
   "Happy:": "Счастье:",
   "Perfect!": "Замечательно!",
@@ -48,8 +50,9 @@
   "Okay, I'll start working on your @key upgrade the day after tomorrow. I always take festivals off.": "Хорошо, я преступлю к работе над @key завтра. Я всегда отдыхаю во время фестиваля.",
   "Okay, I'll start working on your new @key first thing tomorrow morning!": "Хорошо, я начну работать над новым @key завтра с утра!",
   "Okay, I'll start working on your @key upgrade first thing tomorrow morning!": "Хорошо, я начну работать над @key завтра с утра!",
-  "Select a @key to upgrade. Choose a structure to demolish": "Нажмите @key  для обновления. Выберите здание для сноса",
-  "Select a @key to upgrade. Choose a location": "Нажмите @key для обновления. Выберите место",
+  "Select a @key to upgrade.": "Выберите @key для обновления.",
+  "Choose a location": "Выберите место",
+  "Choose a structure to demolish": "Выберите здание для сноса",
   "Only the farm owner can demolish.": "Может снести только хозяин фермы.",
   "Someone's in there!": "Там кто-то есть!",
   "You can't build that in this location.": "Вы не можете строить на этом месте.",
@@ -59,12 +62,12 @@
   "Items Shipped (Farm & Forage)": "Продано предметов (Ферма и добытое)",
   "Total Found: @number": "Всего найдено: @number",
   "Times Cooked: @number": "Приготовлено раз: @number",
-  "Number Caught: @number": "Поймано раз: @number",
+  "Number Caught: @number": "Всего поймано: @number",
   "Biggest Catch: @number in.": "Наибольший улов: @number д.",
-  "Number Found: @number": "Кол-во найдено: @number",
-  "Number Shipped: @number": "Кол-во продано: @number",
+  "Number Found: @number": "Всего найдено: @number",
+  "Number Shipped: @number": "Всего продано: @number",
   "Join Valley": "Вступить в Долину",
-  "Host Valley": "Хозяин Долины",
+  "Host Valley": "Создать Долину",
   "No response": "Не отвечает",
   "ghosted": "призрак",
   "Journal (@key)": "Дневник (@key)",
@@ -89,7 +92,7 @@
   "@number-@number Damage": "@number-@number Урон",
   "+ @number @key": "+ @number @key",
   "@number @key": "@number @key",
-  "Requires @key@newline@keys": "Требуется @key@newline@keyS",
+  "Requires @number@newline@keys": "Требуется @number@newline@keySR",
   "@farm Farm": "@farm Ферма",
   "Current Funds: @numberg": "Текущие средства: @numberg",
   "Total Earnings: @numberg": "Всего заработано: @numberg",
@@ -197,7 +200,9 @@
   "2 Willow Lane@newlineHome of Emily & Haley": "Улица Ивы, дом 2@newlineДом Эмили и Хейли",
   "Town Square": "Городская площадь",
   "Harvey's Clinic@newlineOpen 9:00AM to 3:00PM": "Клиника Харви@newlineОткрыто с 9:00AM до 3:00PM",
+  "\"Harvey's Clinic\"": "Клиника Харви",
   "Pierre's General Store@newlineHome of Pierre, Caroline & Abigail @newlineOpen 9:00AM to 6:00PM (Closed Wednesday)": "Универмаг Пьера@newlineДом Пьера, Кэролайн и Эбигейл@newlineОткрыто с 9:00AM до 6:00PM (Закрыто по Средам)",
+  "Pierre's General Store": "Универмаг Пьера",
   "Blacksmith@newlineOpen 9:00AM to 4:00PM": "Кузнец@newlineОткрыто с 9:00AM до 4:00PM",
   "Saloon@newlineOpen 12:00PM To 12:00AM": "Салун@newlineОткрыто с 12:00PM до 12:00AM",
   "Mayor's Manor": "Поместье Мэра",
@@ -206,14 +211,18 @@
   "Graveyard": "Кладбище",
   "Trailer": "Трейлер",
   "1 River Road@newlineHome of George, Evelyn & Alex": "Дорога у реки, дом 1@newlineДом Джорджа, Эвелин и Алекса",
-  "Carpenter's Shop@newlineHome of Robin, Demetrius, Sebastian & Maru@newlineShop open 9:00AM to 5:00PM most days": "Столярный цех@newlineДом Робин, Деметрия, Себастьяна и Мару@newlineМагазин открыт с 9:00AM до 5:00PM, почти все дни",
+  "Carpenter's Shop@newlineHome of Robin, Demetrius, Sebastian & Maru@newlineShop open 9:00AM to 5:00PM most days": "Столярный магазин@newlineДом Робин, Деметрия, Себастьяна и Мару@newlineМагазин открыт с 9:00AM до 5:00PM, почти все дни",
+  "Carpenter's Shop": "Столярный магазин",
   "Tent": "Палатка",
   "Mines": "Шахты",
   "Adventurer's Guild@newlineOpen 2:00PM to 10:00PM": "Гильдия приключенцев@newlineОткрыто с 2:00AM до 10:00PM",
   "Quarry": "Карьер",
-  "JojaMart@newlineOpen 9:00AM to 11:00PM": "JojaMart@newlineОткрыто с 9:00AM до 11:00PM",
+  "JojaMart@newlineOpen 9:00AM to 11:00PM": "Joja Маркет@newlineОткрыто с 9:00AM до 11:00PM",
+  "JojaMart": "Joja Маркет",
   "Fish Shop@newlineOpen 9:00AM to 5:00PM": "Рыбный Магазин@newlineОткрыто с 9:00AM до 5:00PM",
+  "Fish Shop": "Рыбный Магазин",
   "Spa@newlineOpen all day": "Спа@newlineРаботает весь день",
+  "Spa": "Спа",
   "Secret Woods": "Таинственный лес",
   "Ruined House": "Разрушенный дом",
   "Community Center": "Общественный центр",
@@ -268,8 +277,8 @@
   "Run: @key": "Бег: @key",
   "Inventory Slot #@number": "Слот Инвенторя #@number",
   "Name Unavailable": "Имя недоступно",
-  "Great! I'll send little @key to his new home right away.": "Замечательно! Я отправлю немного @keyR в его новый дом прямо сейчас.",
-  "Great! I'll send little @key to her new home right away.": "Замечательно! Я отправлю немного @keyR в ее новый дом прямо сейчас.",
+  "Great! I'll send little @key to his new home right away.": "Замечательно! Я отправлю малыша @keyR в его новый дом прямо сейчас.",
+  "Great! I'll send little @key to her new home right away.": "Замечательно! Я отправлю малышку @keyR в ее новый дом прямо сейчас.",
   "Purchased @key": "Приобретен @key",
   "Not Enough Money": "Не хватает денег",
   "Not enough money": "Не хватает денег",
@@ -283,7 +292,7 @@
   "Livestock:": "Домашний скот:",
   "Choose a @key for your new @key": "Выберите @key для нового @key",
   "Name your new animal:": "Дайте имя животному:",
-  "Truffle Pig": "Трюфель свиньи",
+  "Truffle Pig": "Трюфельная свинья",
   "Your progress has been saved.": "Ваш прогресс сохранён.",
   "Saving...": "Сохранение...",
   "Done": "Готово",
@@ -320,7 +329,7 @@
   "*sigh*... When the door opened I thought it might be Lewis.": "* Вздыхают * ... Когда дверь открылась, я подумал, что это Льюис.",
   "What'll you have?": "Что ты будешь есть?",
   "Can you smell that? It's the @key": "Чувствуешь запах ? Это @key",
-  "Hungry? Thirsty? I've got just the thing.": "Голод? Жажда? Я могу отдать только одну вещь.",
+  "Hungry? Thirsty? I've got just the thing.": "Голод? Жажда? У меня есть как раз то что нужно.",
   "Welcome to the Stardrop Saloon! What can I get ya?": "Добро пожаловать в бар Стардроп! Что я могу сделать для тебя?",
   "The caves can be dangerous. Make sure you're prepared.": "Пещеры могут быть опасны. Убедись, что ты готов.",
   "In the market for a new sword?": "Хочешь купить новый меч?",
@@ -364,8 +373,8 @@
   "Watch TV shows to learn useful tips, cooking recipes, and more!": "Смотрите шоу по ТВ, чтобы узнать полезные советы, новые рецепты, и многое другое!",
   "The traveling merchant visits Stardew Valley once a week. She sells a wide variety of goods, often at exorbitant prices!": "Путешествующий торговец посещает Долину Стардью раз в неделю. Она продает широкий ассортимент товаров, часто по завышенным ценам!",
   "Thanks for playing!": "Спасибо за игру!",
-  "Elliott's latest sentence: @newline The @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
-  "Elliott's latest sentence: @newline The @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
+  "Elliott's latest sentence:@newlineThe @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
+  "Elliott's latest sentence:@newlineThe @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
   "Challenge: Beat Journey Of The Prairie King without dying.": "Испытание: Пройдите Приключение Короля прерий ни разу не умерев.",
   "New": "Новая",
   "Load": "Загрузить",
@@ -379,8 +388,12 @@
   "(single)": "(без пары)",
   "(boyfriend)": "(парень)",
   "(girlfriend)": "(девушка)",
+  "(wife)": "(жена)",
+  "(husband)": "(муж)",
   "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры",
   "Exhausted": "Истощение",
-  "Jukebox": "Проигрыватель",
-  "- @key - @key": "- @key - @key"
+  "Jukebox": "Музыкальный автомат",
+  "- @key - @key": "- @key - @key",
+  "Last Item Shipped": "Последний проданный предмет",
+  "New record!": "Новый рекорд!"
 }
