--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -33,23 +33,23 @@
   "Did you know that @key hates '@key'? She finds it absolutely @key.": "Знаешь ли ты, что @key ненавидит '@key'? Она находит это совершенно @key.",
   "Did you know that my @key hates '@key'? He finds it absolutely @key.": "Знаешь ли ты, что мой @key ненавидит '@key'? Он находит это совершенно @key.",
   "Did you know that my @key hates '@key'? She finds it absolutely @key.": "Знаешь ли ты, что моя @key ненавидит '@key'? Она находит это совершенно @key.",
-  "My @key really hates '@key'. @key.": "@key действительно ненавидит '@key'. @key.",
+  "My @key really hates '@key'. @key.": "Моя|Мой @key действительно ненавидит '@key'. @key.",
   "@key really hates '@key'. @key.": "@key действительно ненавидит '@key'. @key.",
-  "A word of warning. my @key really hates '@key'. @key.": "Небольшое предупреждение. @key действительно ненавидит '@key'. @key.",
+  "A word of warning. my @key really hates '@key'. @key.": "Небольшое предупреждение. Моя|Мой @key действительно ненавидит '@key'. @key.",
   "A word of warning. @key really hates '@key'. @key.": "Небольшое предупреждение. @key действительно ненавидит '@key'. @key.",
   "If you want @key to dislike you, give him '@key'. He hates it with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
   "If you want my @key to dislike you, give him '@key'. He hates it with a passion. @key.": "Если ты хочешь, чтобы мой @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
-  "If you want @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
-  "If you want my @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы мой @key недолюбливал тебя, подари ему '@key'. Он это страстно ненавидит. @key.",
+  "If you want @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливал тебя, подари ему '@key'. Такие вещи он страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give him '@key'. He hates that stuff with a passion. @key.": "Если ты хочешь, чтобы мой @key недолюбливал тебя, подари ему '@key'. Такие вещи он страстно ненавидит. @key.",
   "If you want @key to dislike you, give her '@key'. She hates it with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
   "If you want my @key to dislike you, give her '@key'. She hates it with a passion. @key.": "Если ты хочешь, чтобы моя @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
-  "If you want @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
-  "If you want my @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы моя @key недолюбливала тебя, подари ей '@key'. Она это страстно ненавидит. @key.",
+  "If you want @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы @key недолюбливала тебя, подари ей '@key'. Такие вещи она страстно ненавидит. @key.",
+  "If you want my @key to dislike you, give her '@key'. She hates that stuff with a passion. @key.": "Если ты хочешь, чтобы моя @key недолюбливала тебя, подари ей '@key'. Такие вещи она страстно ненавидит. @key.",
   "If you want to play a cruel joke on @key, give him '@key'. He might not forgive you, though. @key.": "Если хочешь жестоко пошутить над @keyT, дай ему '@key'. Но он может тебя не простить за это. @key.",
   "If you want to play a cruel joke on my @key, give him '@key'. He might not forgive you, though. @key.": "Если хочешь жестоко пошутить над моим @keyT, дай ему '@key'. Но он может тебя не простить за это. @key.",
   "If you want to play a cruel joke on @key, give her '@key'. She might not forgive you, though. @key.": "Если хочешь жестоко пошутить над @keyT, дай ей '@key'. Но она может тебя не простить за это. @key.",
   "If you want to play a cruel joke on my @key, give her '@key'. She might not forgive you, though. @key.": "Если хочешь жестоко пошутить над моей @keyT, дай ей '@key'. Но она может тебя не простить за это. @key.",
-  "I learned that one the hard way": "Я узнал об этом на горьком опыте",
+  "I learned that one the hard way": "Я узнал|узнала об этом на горьком опыте",
   "I'm not sure why": "Я не знаю почему",
   "Just the thought of it can make him depressed": "Даже мысль об этом может ввести его в депрессию",
   "Just the thought of it can make her depressed": "Даже мысль об этом может ввести её в депрессию",
@@ -59,9 +59,9 @@
   "@key hates '@key'. You don't want to know the details. Trust me.": "@key ненавидит '@key'. Ты не хочешь знать всех деталей. Просто поверь на слово.",
   "@key really hates '@key'! He told me.": "@key ненавидит '@key'! Он сам мне сказал.",
   "Did you know that @key loves '@key'?": "Знаешь ли ты, что @key обожает '@key'?",
-  "Did you know that my @key loves '@key'?": "Знаешь ли ты, что @key обожает '@key'?",
+  "Did you know that my @key loves '@key'?": "Знаешь ли ты, что моя|мой @key обожает '@key'?",
   "Here's a secret. @key loves '@key'. @key.": "Вот тебе секрет. @key любит '@key'. @key.",
-  "Here's a secret. my @key loves '@key'. @key.": "Вот тебе секрет. @key любит '@key'. @key.",
+  "Here's a secret. my @key loves '@key'. @key.": "Вот тебе секрет. Моя|Мой @key любит '@key'. @key.",
   "If you want @key to like you, give him '@key'. @key.": "Если хочешь понравиться @keyD, дай ему '@key'. @key.",
   "If you want my @key to like you, give him '@key'. @key.": "Если хочешь понравиться моему @keyD, дай ему '@key'. @key.",
   "If you want @key to like you, give her '@key'. @key.": "Если хочешь понравиться @keyD, дай ей '@key'.",
@@ -71,7 +71,7 @@
   "If you want to get on @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у @keyR, подари ей '@key'. @key.",
   "If you want to get on my @key's good side, give her '@key'. @key.": "Если хочешь получить хорошее расположение у моей @keyR, подари ей '@key'. @key.",
   "If you want to make friends with @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибешься если подаришь '@key'. @key.",
-  "If you want to make friends with my @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с @keyT, ты не ошибешься если подаришь '@key'. @key.",
+  "If you want to make friends with my @key, you can't go wrong with '@key'. @key.": "Если ты хочешь подружиться с моей|моим @keyT, ты не ошибешься если подаришь '@key'. @key.",
   "It's his favorite": "Это его любимое",
   "It's her favorite": "Это её любимое",
   "He loves it": "Он любит это",
@@ -80,7 +80,7 @@
   "She loves that stuff": "Она любит такие вещи",
   "I gave it to him one year and he wouldn't stop talking about it": "Я в один год селал|сделала ему такой подарок и он говорил об этом не переставая",
   "I gave it to her one year and she wouldn't stop talking about it": "Я в один год селал|сделала ей такой подарок и она говорил об этом не переставая",
-  "It would make a great gift": "Получился бы отличный подарок",
+  "It would make a great gift": "Получится отличный подарок",
   "You could really make him happy with that": "Ты действительно мог бы порадовать его этим.^Ты действительно могла бы порадовать его этим.",
   "You could really make her happy with that": "Ты действительно мог бы порадовать её этим.^Ты действительно могла бы порадовать её этим.",
   "Abigail loves '@key'. She keeps a box of it under her bed. Weird, huh?": "Эбигейл обожает '@key'. Она держит целую коробку у себя под кроватью. Странно, правда?",
@@ -99,6 +99,7 @@
   "Ow! I can't believe you would do that to me!": "Ой! Не могу поверить, что ты можешь так поступить со мной!",
   "That hurt! What's your problem?": "Это неприятно! Зачем ты это сделал?^Это неприятно! Зачем ты это сделала?",
   "Your house should be ready tomorrow.": "Твой дом должен быть готов завтра.",
+  "__comment": "marriageDuties()",
   "I just feel like sleeping today.": "Сегодня я чувствую себя сонным|сонной.",
   "I'm bored...": "Мне скучно...",
   "Sometimes I wonder if I'm doing the right thing with my life...": "Иногда я задумываюсь, действительно ли я делаю правильные вещи в жизни...",
@@ -109,7 +110,7 @@
   "*sigh*... my skin looks horrible today.": "*вздох* ...Моя кожа сегодня ужасно выглядит.",
   "*sigh*... my hair looks horrible today.": "*вздох* У меня сегодня жуткая причёска...",
   "It does... I can tell by the way you're looking at me.": "Это правда... Я могу это определить по тому, как ты на меня смотришь.",
-  "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?",
+  "Don't you ever feel trapped?": "Ты когда-нибудь чувствовал себя как в ловушке?^Ты когда-нибудь чувствовала себя как в ловушке?",
   "*grumble*... chores...": "*ворчание*... хлопоты...",
   "Don't you have work to do?": "Тебе разве нечем заняться?",
   "Nghh... what is it? I'm trying to sleep.": "Нгхх... ну что еще? Я вообще-то пытаюсь уснуть.",
@@ -129,12 +130,18 @@
   "Being a parent is annoying, sometimes...  I just don't feel like getting up.": "Быть родителем - раздражает, иногда... мне просто не хочется вставать.",
   "I need some alone time... Why don't you take care of the kids for a change?": "Мне нужно немного побыть одному|одной... почему бы тебе не позаботиться о детях для разнообразия?",
   "I was going to make you breakfast, but I changed my mind.": "Я хотел|хотела приготовить завтрак для тебя, но передумал|передумала.",
-  "I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день более легким.",
+  "Hi @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день более легким.",
   "I also filled @key's water bowl.": "А еще я наполнил|наполнила миску @keyR водой.",
   "Good Morning, @key! I got up early and watered some crops for you. I hope it makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я полил|полила некоторые растения для тебя. Надеюсь, это сделает твой день более легким.",
   "I got up early to water some crops and they were already done! You've really got this place under control.": "Проснувшись рано утром, я хотел|хотела полить растения, но все уже было сделано! У тебя и правда все под контролем.",
-  "I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день более легким.",
+  "I was going to water some crops this morning, but I couldn't find any! Are you even doing any work out here?": "Я хотел|хотела полить растения этим утром, но не смогла найти ни одного! Ты вообще занимаешься хоть чем-нибудь полезным здесь?",
+  "Hi @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Привет, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день более легким.",
+  "Good Morning, @key! I got up early and fed all the farm animals. I hope that makes your job a little easier today.": "Доброе утро, @key! Проснувшись рано утром, я покормил|покормила всех животных на ферме. Надеюсь, это сделает твой день более легким.",
+  "Erm... @key? Why don't we have any farm animals?": "Эмм... @key? А почему мы до сих пор не завели никакого домашнего скота?",
+  "Hi @key! @key": "Привет, @key! @key",
+  "Good Morning, @key! @key": "Доброе утро, @key! @key",
   "I spent the morning repairing a few of the fences. They should be as good as new.": "Всё утро я ремонтировал|ремонтировала забор. Теперь, он как новенький.",
+  "I was going to fix some fences this morning but I couldn't find any! It's kind of strange not to have any fences, isn't it?": "Утром я собирался|собиралась починить несколько оград, но с удивлением ни одной не обнаружил. Тебе не кажется странным не иметь ни одного ограждения?",
   "What do you think, @key? I ordered this the other day and it just arrived.": "Что скажешь, @key? Я заказал|заказала это пару дней назад, и оно только что прибыло.",
   "What do you think, @key? I figured the room could use a little more decoration.": "Что скажешь, @key? Я считаю, что в этой комнате нужно больше украшений.",
   "I was going to do some decorating today, but I changed my mind.": "Я хотел|хотела украсить эту комнату сегодня, но передумал|передумала.",
