--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -5,10 +5,10 @@
   "he's worked hard on his farm,": "он усердно работал на своей ферме,",
   "made significant contributions to the field of archaeology,": "внес значительный вклад в археологию,",
   "has been a big help around town,": "оказал помощь всему городу,",
-  "has come to be loved by many residents,": "стал любимым многими жителями,",
+  "has come to be loved by many residents,": "полюбился многим жителям,",
   "has become a local fishing legend,": "стал местной рыболовной легендой,",
-  "has explored the shadowy depths of the local mine,": "исследовал темные глубины шахт,",
-  "and has earned over @numberg in revenue.": "и заработал более @numberg дохода.",
+  "has explored the shadowy depths of the local mine,": "исследовал тёмные глубины местной шахты,",
+  "and has earned over @numberg in revenue.": "и заработал более @numberg.",
   "__comment": "Game1.player.songsHeard.Add",
   "Bouncy": "Bouncy",
   "Wonky Tonk": "Wonky Tonk",
@@ -35,12 +35,12 @@
   "Credits:@newline @newline@newline@newlineProgramming,@newlineArt, Music,@newlineSound Effects, Writing:@newline@newline-Eric Barone@newline@newline@newline@newlineSpecial Thanks:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineeveryone from HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineThanks for playing! :)": "Титры:@newline @newline@newline@newlineПрограммирование,@newlineДизайн, Музыка,@newlineЗвуковые эффекты, Сценарий:@newline@newline-Eric Barone@newline@newline@newline@newlineОтдельное спасибо:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineвсем из HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineСпасибо, что играли! :)",
   "First Night": "Первая ночь",
   "The pages are too faded to read": "Страницы слишком нечеткие",
-  "Requires construction of a Coop": "Требуется строительство курятника",
-  "Requires construction of a Barn": "Требуется строительство сарая",
-  "Requires construction of a Big Barn": "Требуется строительство большого сарая",
-  "Requires construction of a Big Coop": "Требуется строительство большого курятника",
-  "Requires construction of a Deluxe Barn": "Требуется строительство роскошного сарая",
-  "Requires construction of a Deluxe Coop": "Требуется строительство роскошного курятника",
+  "Requires construction of a Coop": "Требуется птичник",
+  "Requires construction of a Barn": "Требуется хлев",
+  "Requires construction of a Big Barn": "Требуется большой хлев",
+  "Requires construction of a Big Coop": "Требуется большой птичник",
+  "Requires construction of a Deluxe Barn": "Требуется роскошный хлев",
+  "Requires construction of a Deluxe Coop": "Требуется роскошный птичник",
   "Dairy Cow": "Молочная корова",
   "__comment": "getSongTitleFromCueName",
   "Spring (It's A Big World Outside)": "Spring (It's A Big World Outside)",
@@ -116,38 +116,38 @@
   "Calico Desert": "Calico Desert",
   "Joja Office Ambience": "Joja Office Ambience",
   "__comment": "getWeddingEvent",
-  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в город Пеликан, никто не знал, будет ли он вписаться в наше общество...",
+  "When @player first arrived in Pelican Town, no one knew if he'd fit in with our community...": "Когда @player впервые прибыл в Пеликан-таун, никто не знал, сможет ли он вписаться в наше сообщество...",
   "But from this day forward, @player is going to be as much a part of this town as any of us!": "Но с этого дня, @player будет такой же частью этого города, как любой из нас!",
-  "It is my great honor on this day @number of @key, to unite @player and @key in the bonds of marriage.": "Для меня большая честь в этот день @number @key, объединить @player и @key узами брака.",
-  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в город Пеликан, никто не знал, будет ли она вписаться в наше общество...",
+  "It is my great honor on this day @number of @key, to unite @player and @key in the bonds of marriage.": "Для меня большая честь в этот день @number @key, связать @player и @key узами брака.",
+  "When @player first arrived in Pelican Town, no one knew if she'd fit in with our community...": "Когда @player впервые прибыла в Пеликан-таун, никто не знал, сможет ли она вписаться в наше сообщество...",
   "Well, let's get right to it!": "Ну, давайте сразу к делу!",
   "@player... @key...": "@player... @key...",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and wife!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас мужем и женой!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас мужем и ... и мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас женой и мужем!",
-  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр города Пеликан, и регионального обладателя супружеской печатью, Объявляю вас женой и ... и женой!",
-  "You may kiss.": "Вы можете поцеловаться.",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и женой!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you husband and ..., well, husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас мужем и... кхм... мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and husband!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и мужем!",
+  "As the mayor of pelican town, and regional bearer of the matrimonial seal, I now prounounce you wife and ..., well, wife!": "Как мэр Пеликан-тауна и местный хранитель брачной печати - объявляю вас женой и... кхм... женой!",
+  "You may kiss.": "Можете поцеловать друг друга.",
   "Life is going to be different from now on...": "С этого момента ваша жизнь сильно измениться...",
-  "...But the future looks bright!": "...Но ваше будущее будет светлым!",
+  "...But the future looks bright!": "...Но, несомненно, в лучшую сторону!",
   "Didn't work - @key": "Не работает - @key",
   "__comment": "perpareDayForStardewCelebration",
   "Sorry, @player...": "Прости, @player...",
-  "Maybe in 'another life' you'll win...": "Может быть в 'другой жизни' ты выиграешь...",
+  "Maybe in 'another life' you'll win...": "Может быть в \"другой жизни\" выиграешь...",
   "@key won? I'm still shocked...": "@key выиграл? Я в шоке...",
   "Ugh... how in the world did @key win? That's awful.": "Тьфу.. как вообще @key мог победить? Это ужасно.^Тьфу.. как вообще @key могла победить? Это ужасно.",
-  "Hmmph. They'd never give that award to an old timer like me.": "Хмпф. Они не когда не дадут награду старикам вроде меня.",
+  "Hmmph. They'd never give that award to an old timer like me.": "Хмпф. Старикам награды не полагаются, конечно.",
   "Congratulations, @player! I knew you'd win.": "Поздравляю,  @player! Я знала, что ты победишь.",
   "We all knew you were going to win, @player. @key was kind of a jerk.": "Мы все знали, что ты выиграешь, @player.  @key был придурком.",
-  "Stardew Hero... I'm impressed!": "Стардью герой... я впечатлен!",
-  "It's such a great honor you received, @player! But you earned it.": "Тебе оказывают огромную честь, @player! Но ты заслужил это.^Тебе оказывают огромную честь, @player! Но ты заслужила это.",
-  "I'm so glad @key didn't win.": "Я так рада, что @key не выиграл.",
-  "You did it, @player!": "Ты сделал это, @player!^Ты сделала это, @player!",
-  "Good job, dude.": "Хорошая работа, чувак.",
+  "Stardew Hero... I'm impressed!": "Герой Стардью... Вот это да!",
+  "It's such a great honor you received, @player! But you earned it.": "Тебе оказали огромную честь, @player! Но ты заслужил.^Тебе оказали огромную честь, @player! Но ты заслужила.",
+  "I'm so glad @key didn't win.": "Я так рада, что @key не выиграл.^Я так рада, что @key не выиграла.",
+  "You did it, @player!": "У тебя вышло, @player!\n",
+  "Good job, dude.": "Хорошая работа, дружище.",
   "Good job, @player.": "Хорошая работа, player.",
   "__comment": "getStardewHeroCelebrationEventString",
   "__comment": "Lewis says",
-  "Welcome, everyone, to the 16th Centennial Stardew Hero Celebration!": "Мы приветствуем всех на 16-том праздновании, проходящее раз в сто лет, Дня Героя Стардью!",
-  "We've been a long time without a Stardew Hero, and I think we can all agree it's time to bestow this prestigious award on someone new!": "Мы долгое время не вручали эту награду никому, но я думаю, и все с этим согласятся, что настало время наградить кое-кого нового.",
+  "Welcome, everyone, to the 16th Centennial Stardew Hero Celebration!": "Добро пожаловать на 16-ю церемонию присвоения звания \"Героя долины Стардью\", которая проходит раз в сто лет!",
+  "We've been a long time without a Stardew Hero, and I think we can all agree it's time to bestow this prestigious award on someone new!": "Уже очень давно у долины не было героя и я думаю все согласятся, что настало время присвоить это почётное звание кому-то новому!",
   "...The title of Stardew Hero is awarded only to those who've displayed extraordinary commitment to this valley and the people who live here.": "... Звание Героя Стардью присуждается тому, кто уже доказал преданность долине и тем людям, которые в ней живут.",
   "There are many here who've done a lot for this community, but unfortunately there can only be one Stardew Hero.": "Здесь очень много людей, которые делали всё для нашего сообщества, но стать Героем Стардью может только один.",
   "...And standing before you today are the two top contenders. @player and @key.": "... И сегодня перед вами стоят два главных соперника. @player и @key.",
@@ -157,7 +157,7 @@
   "@key also moved here 2 years ago. In that time she's created one of the most productive farms I've ever seen!": "@key также переехала сюда 2 года назад. За это время она создала одну из самых продуктивных ферм, которые я когда-либо видел!",
   "...And funneled a large sum into my personal bank acc... er, I mean campaign fund!": "... И огромная сумма поступает на мой личный банковский счет... То есть, я хотел сказать в избирательный фонд!",
   "__comment": "rival says",
-  "Thank you, Mayor, sir!": "Спасибо вам, мэр!",
+  "Thank you, Mayor, sir!": "Спасибо вам, господин мэр!",
   "I would like to to say how much of a *blessing* it's been to meet all of you wonderful people! I'm so happy to know how important I am in making this community great.": "Я хотел бы сказать, что очень *счастлив* познакомится с такими замечательными людьми, как вы! Я очень рад тому, что могу сделать сообщество лучше.^Я хотела бы сказать, что очень *счастлива* познакомится с такими замечательными людьми, как вы! Я очень рада тому, что могу сделать сообщество лучше.",
   "Unfortunately, @player was so jealous of me that he did everything possible to drag me down!": "К сожалению, @player завидует мне и сделает всё, чтобы унизить меня!",
   "But, against all odds, I've single-handedly transformed this valley into a new paradise, and touched your hearts in a way you'll never forget. *sniff*": "Но, несмотря на все трудности, я смогу в одиночку превратить эту долину в новое райское место, тронув ваши сердца, как никто прежде. *Шмыгает носом*",
