--- a/MultiLanguage/languages/RU/dictionaries/schedules.json
+++ b/MultiLanguage/languages/RU/dictionaries/schedules.json
@@ -108,27 +108,27 @@
   "__comment": "Pam",
   "*grumble*... Doctor know-it-all... *grumble*": "*ворчание*... Доктор всезнайка... *ворчание*",
   "How much do I drink every day? What kind of a question is that?": "Сколько я выпиваю за день? Что за вопрос такой?",
-  "I'm going to go inside, I just wanted a quiet moment.": "Я пойду внутрь, я просто хотел побыть в тишине.",
   "__comment": "Penny",
-  "I have an appointment at the clinic this afternoon.": "У меня назначена встреча в клинике в этот день.",
+  "I'm going to go inside, I just wanted a quiet moment.": "Я пойду внутрь, я просто хотела побыть в тишине.",
+  "I have an appointment at the clinic this afternoon.": "У меня назначена встреча в клинике сегодня вечером.",
   "Hey! A little privacy, please?": "Эй! Немного личного пространства, пожалуйста?",
-  "Hi, honey. It's nice of you to visit me at work.": "Привет, дорогая. Очень мило, навестить меня на работе.",
-  "Hi, honey! I'm just doing some shopping.": "Привет, дорогая. Я просто зашел в магазин.",
+  "Hi, honey. It's nice of you to visit me at work.": "Привет, дорогой. Очень мило, навестить меня на работе.^Привет, дорогая. Очень мило, навестить меня на работе.",
+  "Hi, honey! I'm just doing some shopping.": "Привет, дорогой. Я зашла в магазин кое-что купить.^Привет, дорогая. Я зашла в магазин кое-что купить.",
   "Don't worry, I'm using my own money to buy this.": "Не беспокойся, я куплю это на свои деньги.",
   "I wonder if Maru will get married some day?": "Интересно, Мару выйдет когда-нибудь замуж?",
   "__comment": "Pierre",
   "I've been working hard all week. I deserve a little relaxation on a Friday night.": "Я усердно работал всю неделю, и имею право отдохнуть в пятницу вечером.",
   "__comment": "Robin",
   "We meet every week to encourage each other to stay healthy.": "Мы видимся каждую неделю, чтобы поддерживать друг друга и быть здоровым.",
-  "What's a healthy young person like you doing here?": "Что такой здоровый и молодой человек делает здесь?",
-  "Nothing bad to report, Doc. I feel as healthy as ever.": "Не могу сказать не чего плохого, Док. Я здоров как никогда.",
+  "What's a healthy young person like you doing here?": "Что такой здоровый и молодой человек делает здесь?^Что такой здоровая и молодая женщина делает здесь?",
   "__comment": "Sam",
+  "Nothing bad to report, Doc. I feel as healthy as ever.": "Не могу сказать ничего плохого, Док. Я здоров как никогда.",
   "Mom seems okay. A little overworked, maybe.": "Мама кажется в порядке. Немного устала, может быть.",
-  "Vincent seems a little lonely without me around. I used to play with him a lot.": "Винсент кажется немного одинок без меня. Я много с ним играл.",
-  "Don't tell my mom... but I really just came over for a free lunch.": "Не говори моей маме... но я просто пришел на бесплатный обед.",
-  "Sorry, honey. I'm trying to concentrate here... ": "Прости, дорогая. Я пытаюсь сконцентрироваться... ",
-  "Nothing like an ice cold Joja Cola on a sopping wet day, huh?": "Нечего лучше ледяной колы Joja в этот сырой день, да?",
-  "Just kidding. Hehehe.": "шучу. Хехехе.",
+  "Vincent seems a little lonely without me around. I used to play with him a lot.": "Кажется Винсенту немного одиноко без меня. Я много с ним играл.",
+  "Don't tell my mom... but I really just came over for a free lunch.": "Не говори моей маме... но я просто зашёл на бесплатный обед.",
+  "Sorry, honey. I'm trying to concentrate here... ": "Прости, дорогой. Я пытаюсь сконцентрироваться... ^Прости, дорогая. Я пытаюсь сконцентрироваться... ",
+  "Nothing like an ice cold Joja Cola on a sopping wet day, huh?": "Нечего лучше ледяной Joja колы в этот сырой день, да?",
+  "Just kidding. Hehehe.": "Я шучу. Хехехе.",
   "I gotta go visit Uncle Doctor today... Great.": "Я должен навестить дядю доктора сегодня... Отлично.",
   "I'm a healthy boy, doc. Can I go now? This is boring.": "Я здоровый парень, док. Я могу идти? А то скучно.",
   "I just got out of the doctor's office. Completely healthy and vigorous, just as I expected.": "Я только что покинул врача. Бодрый и здоровый, как и ожидал.",
